Implementação completa de CRUD, da parte do time.

--- a/app/src/main/res/layout/fragment_form_time.xml
+++ b/app/src/main/res/layout/fragment_form_time.xml
@@ -8,38 +8,25 @@
     tools:context=".FormTimeFragment" >
 
     <EditText
-        android:id="@+id/txt_descricao"
-        android:layout_width="204dp"
-        android:layout_height="162dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="28dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_nome_time"
-        tools:text="Descrição" />
-
-    <EditText
-        android:id="@+id/txt_nome_time"
+        android:id="@+id/txtNomeTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="108dp"
+        android:autoText="false"
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btn_finalizar_time"
+        android:id="@+id/btnFinalizarTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="101dp"
+        android:layout_marginTop="259dp"
         android:text="Finalizar Cadastro"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_descricao" />
+        app:layout_constraintTop_toBottomOf="@+id/txtNomeTime" />
 </androidx.constraintlayout.widget.ConstraintLayout>
