--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -16,9 +16,10 @@
 
     <ListView
         android:id="@+id/list_times"
-        android:layout_width="412dp"
-        android:layout_height="527dp"
-        android:layout_marginTop="102dp"
+        android:layout_width="411dp"
+        android:layout_height="442dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="168dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
